# collab-docs-service

./: .env.example  .gitignore  Makefile  README.md  conftest.py  pyproject.toml
infrastructure/local/: Dockerfile.dev  docker-compose.debug.yml  docker-compose.yml
infrastructure/prod/: Dockerfile  docker-stack.yml  traefik.yml
infrastructure/prod/configs/traefik/: dynamic.yml
src/: __init__.py  main.py
src/core/: config.py  database.py  dependencies.py  email.py  exceptions.py  images.py  models.py  redis_pubsub.py  websockets.py
src/modules/: __init__.py
src/modules/auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py  security.py  services.py
src/modules/auth/tests/: test_auth.py
src/modules/documents/: __init__.py  crdt.py  dependencies.py  models.py  router.py  schemas.py  services.py  websocket_router.py
src/modules/documents/tests/: test_crdt_logic.py  test_crdt_sync.py  test_documents.py  test_sync.py
static/: collaborative_lab.html  dashboard.html  editor.html  index.html
static/css/: styles.css
static/js/: api.js  auth.js  dashboard.js  editor.js  utils.js
tests/: conftest.py
tests/integration/: __init__.py
